Mon Apr 09 18:02:27 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.c: gah! add missing show for the icon entry hack

2001-04-02  Fatih Demir <kabalak@gtranslator.org>

	* panel.soundlist: Small update of the Turkish entry.

Fri Mar 30 16:33:38 2001  George Lebl <jirka@5z.com>

	* menu-properties.c, panel-util.c: use the icon hack properly and
	  set the default icon BEFORE we hack the icon entry to avoid
	  icons reverting bug which was very annoying.

Thu Mar 29 11:46:53 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c:  remove the configure hack as
	  apparently sawfish isn't too happy with it, this reintroduces the
	  bug where you can lose panels by dragging them off in deskguide,
	  but oh well.

	* extern.c: make the "loading" image be 18x18 instead of 24x24 to fix
	  bugs with drivemounts being separated

	* xstuff.c: ignore panel windows when checking for swallows and
	  status windows, and don't check for status windows on task changes,
	  just on task new.

2001-03-28  jacob berkman  <jacob@ximian.com>

	* foobar-widget.c (set_the_task_submenu): make this a scrolled
	menu, yo

Mon Mar 26 23:35:29 2001  George Lebl <jirka@5z.com>

	* global-keys.c: activate things on key press not release

Tue Mar 20 04:19:03 2001  George Lebl <jirka@5z.com>

	* launcher.c, session.c, foobar-widget.c: #warning is a gcc specific
	  feature, so don't use

Mon Mar 12 15:28:53 2001  George Lebl <jirka@5z.com>

	* extern.c:  fix the loading extern applet icon to work again

Sun Mar 11 16:33:44 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, xstuff.[ch], main.c, session.c: when recalcing
	  borders, call xstuff to set up a property on the root window about
	  a rectengular area that's ok for usage by things like nautilus
	  icons.

	* foobar-widget.c: queue recalc on size_allocate

Sat Mar 10 07:57:16 2001  George Lebl <jirka@5z.com>

	* floating-widget.c: apply patch from Brian Warner <warner@lothar.com>
	  to fix hide size.
