@@ -219,6 +219,7 @@ void		panel_widget_change_global	(int explicit_step,
 						 int drawer_step,
 						 int minimized_size,
 						 int minimize_delay,
+						 int maximize_delay,
 						 PanelMovementType move_type,
 						 gboolean disable_animations,
 						 int applet_padding,
