@@ -12,6 +12,7 @@ BEGIN_GNOME_DECLS
 
 /* amount of time in ms. to wait before lowering panel */
 #define DEFAULT_MINIMIZE_DELAY 300
+#define DEFAULT_MAXIMIZE_DELAY 0
 
 /* number of pixels it'll stick up from the bottom when using
    PANEL_AUTO_HIDE */
